
TODO:   /*TODO: the xlceararea/xfillrectangle below don't take scroll offste into account, ask mikachu for details */

TODO: investgate wm resize race: while sleep 0.001; do printf "\033[?30l";sleep 0.001;printf "\033[?30h";done
TODO: investigate miroslav patches
TODO: artificially enlargen wide characters at end to correctly cut&paste.
TODO: cursor over overlays, when focus change?
	- remove bogus "setuid/setgid security issues" from rxvt.1.pod, they
          no longer apply.
        - the urgency hint is now cleared on both focus in and focus out.
        - cache urgency hint locally to avoid server rtt on every focus change.
	- perl 5.10 needs PERL_SYS_INIT3 on hppa.
	- ignore byte-order marks and do not treat them like combining characters.
        - fix build issue when CURSOR_BLINK is not defined (Emanuele Giaquinta).
        - do some µ-optimisations to the character fast path.
        - use a less cunning, but more robust algorithm to avoid one terminal
          monopolising the whole process by outputting a lot of text.
        - try to work around linux first breaking sched_yield and now breaking
          the only known workaround.
        - new option -icon, resource iconFile (based on patch by Frank Schmitt).
        - intiialise the as visual only on demand, instead of unconditionally.

9.05 Sun Jun 15 20:09:20 CEST 2008
	- new option --cd/chdir to set the starting working directory.
        - tabbed extension now starts in the "correct" working directory.
	- work around fedora 9 providing isastream but not the relevant
          header file for it (report by Tuncer Ayaz).
	- upgrade libev, fixing a bug in the select backend
          with more than 31 file descriptors on non-linux 64 bit systems.
	- correctly reset the multibyte state to the initial one
          after EILSEQ (patch by Neil Booth). This fixes the
          issue of rxvt-unicode not properly displaying text after an illegal
          sequence on NetBSD and probably other systems.